<resources>
    <string name="app_name">AppMusic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password (Ít nhất 6 ký tự)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="reset_password">Reset Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="nh_p_email_c_a_b_n_x_c_nh_n">Nhập Email của bạn để xác nhận</string>
    <string name="quay_l_i">Quay Lại</string>
    <string name="setting">Setting</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>


</resources>